# cmake_to_bazel

./: .gitignore  BUILD  README.md  WORKSPACE  debug_conditional.py  debug_target_link_libraries.py  debug_test.py  requirements.txt
cmake_to_bazel/: BUILD  ast_generator.py  ast_generator_tests.py  ast_nodes.py  ast_nodes_tests.py  cmake_to_bazel.bzl
cmake_to_bazel/parsers/: BUILD  cmake_parser.py  cmake_parser_tests.py  debug_parser.py
docs/: cmake_patterns.md  troubleshooting.md  user_guide.md
docs/examples/advanced/: BUILD  CMakeLists.txt
docs/examples/simple/: BUILD  CMakeLists.txt
testfiles/: CMakeLists.txt
